# atlas-examples

./: .gitignore  README.md  cabal.project
.github/: CODEOWNERS
bet-ref/: betref.cabal  cabal.project  config.sample.json  swagger-api.json
bet-ref/onchain/BetRef/OnChain/: BetRef.hs
bet-ref/onchain/BetRef/OnChain/BetRef/: Compiled.hs
bet-ref/server/: server-main.hs
bet-ref/server-lib/BetRef/Api/: BetRef.hs  Context.hs  Operations.hs  Tx.hs
bet-ref/tests/: betref-tests.hs
bet-ref/tests-privnet/: betref-privnet-tests.hs
bet-ref/tests-privnet/BetRef/Tests/Privnet/: Tests.hs
bet-ref/tests/BetRef/Tests/: PlaceBet.hs  TakeBetPot.hs
dex1/: .envrc  .gitignore  cabal.project  config.min.json  config.sample.json  dex1.cabal  swagger-api.json
dex1/.devcontainer/: devcontainer.json
dex1/onchain/BetRef/OnChain/BetRef/: Compiled.hs
dex1/onchain/Dex/OnChain/: Token.hs
dex1/onchain/Dex/OnChain/Dex/: Compiled.hs
dex1/onchain/Dex/OnChain/Uniswap/: OnChain.hs  Pool.hs  Types.hs
dex1/onchain/Dex/OnChain/Uniswap/Uniswap/: Compiled.hs
dex1/server/: dex-server-main.hs
dex1/server-lib/BetRef/Api/: Api.hs  Operations.hs
dex1/server-lib/Dex/Api/: Api.hs  Context.hs  Dex.hs  Operations.hs  Scripts.hs  Tx.hs
dex1/tests/: betref-tests.hs  dex-tests.hs
dex1/tests-privnet/: dex-privnet-tests.hs
dex1/tests-privnet/BetRef/Tests/Privnet/: Tests.hs
dex1/tests-privnet/Dex/Tests/Privnet/: Tests.hs
dex1/tests/BetRef/Tests/: PlaceBet.hs
dex1/tests/Dex/Tests/: CreateToken.hs
vesting/: cabal.project  cabal.project.local  recipient-preprod.addr  recipient.vkey  sender-preprod.addr  sender.vkey  vesting.cabal
vesting/app/: place.hs  retrieve.hs
vesting/offchain/Vesting/: Api.hs  Script.hs  Utils.hs
vesting/onchain/Vesting/OnChain/: Vesting.hs
vesting/onchain/Vesting/OnChain/Vesting/: Compiled.hs
