cabal-version:      3.6
name:               betref
version:            0.1.0

common common
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library betref-onchain
  import:           common, plutus-ghc-options
  hs-source-dirs:   onchain
  exposed-modules:
    BetRef.OnChain.BetRef
    BetRef.OnChain.BetRef.Compiled
  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

library betref-server-lib
  import:           common
  hs-source-dirs:   server-lib
  exposed-modules:
    BetRef.Api.Api
    BetRef.Api.BetRef
    BetRef.Api.Context
    BetRef.Api.Operations
    BetRef.Api.Tx
  build-depends:
    , base
    , aeson
    , betref:betref-onchain
    , atlas-cardano
    , swagger2
    , servant-server
    , servant-swagger
    , containers
    , text

executable betref-server
  import:           common
  hs-source-dirs:   server
  main-is:          server-main.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , aeson-pretty
    , base
    , bytestring
    , atlas-cardano
    , betref:betref-server-lib
    , servant-server
    , transformers
    , wai-cors
    , http-types
    , warp

test-suite betref-tests
  import:         common
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  main-is:        betref-tests.hs
  hs-source-dirs: tests
  other-modules:
    BetRef.Tests.PlaceBet
    BetRef.Tests.TakeBetPot
  build-depends:
    , base
    , containers
    , betref:betref-onchain
    , betref:betref-server-lib
    , extra
    , text
    , atlas-cardano
    , mtl
    , tasty