cabal-version:      3.6
name:               vesting
version:            0.1.0

common common
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library vesting-onchain
  import:           common, plutus-ghc-options
  hs-source-dirs:   onchain
  exposed-modules:
    Vesting.OnChain.Vesting
    Vesting.OnChain.Vesting.Compiled
  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

library vesting-offchain
  import:           common
  hs-source-dirs:   offchain
  exposed-modules:
    Vesting.Api
    Vesting.Script
  build-depends:
    , base
    , atlas
    , containers
    , vesting:vesting-onchain

executable place-vesting
  import:           common
  hs-source-dirs:   app
  main-is:          place.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , atlas
    , text
    , vesting:vesting-offchain

executable retrieve-vesting
  import:           common
  hs-source-dirs:   app
  main-is:          retrieve.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , base
    , atlas
    , vesting:vesting-offchain
